--- a/PNW project/pnw.css
+++ b/PNW project/pnw.css
@@ -1,6 +1,6 @@
 h1 {
-  color: white;
-  text-shadow: 4px 4px black;
+  color: black;
+  text-shadow: 4px 4px white;
   text-align: center;
   font-size: 55px;
 }
@@ -51,6 +51,15 @@ li a:hover {
 div {
   background-color: black;
   color: white;
-  float: inherit;
+}
+
+table{
+  font-size: 30px;
+  border-style: solid;
+  border-color: black;
+
+}
+table, th, td {
+  border: 1px solid black;
 }
 </style>
