--- a/buzzfeedquiz/buzzfeedquiz.css
+++ b/buzzfeedquiz/buzzfeedquiz.css
@@ -1,1 +1,12 @@
-h1 {color: blue}
+h1
+{color: black;
+background-color:skyblue;
+text-align:center;
+font-style: italic;
+}
+h3
+{color: black;
+text-align: left;}
+
+image
+{border-style: solid;}
