--- a/buzzfeedquiz/buzzfeedquiz.css
+++ b/buzzfeedquiz/buzzfeedquiz.css
@@ -3,11 +3,13 @@ h1
 background-color:skyblue;
 text-align:center;
 font-style: italic;
+text-shadow: 2px 2px white;
 }
 
 h3
 {color: black;
-text-align: left;}
+text-align: left;
+}
 
 body {
   background-color: lightblue;}
